# DogGameCPP

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp  old_main.cpp
src/core/: CollisionDetector.cpp  CollisionDetector.h  DataTypes.cpp  DataTypes.h  Dog.cpp  Dog.h  Exceptions.h  Game.cpp  Game.h  GameSession.cpp  GameSession.h  LootGenerator.cpp  LootGenerator.h  MapModel.cpp  MapModel.h  MapParser.cpp  MapParser.h  Utils.cpp  Utils.h
src/db/: connection_engine.h  postgres.cpp  postgres.h
src/network/: api_handler.cpp  api_handler.h  http_server.cpp  http_server.h  request_handler.h  ticker.h
src/serialization/: game_state_serialization.cpp  game_state_serialization.h  json_loader.cpp  json_loader.h  json_serializer.cpp  json_serializer.h
src/utility/: utility_functions.h
test/: second_mock.cpp  simple_mock.cpp  test_core_utils.cpp  test_data_types.cpp  test_map_parser.cpp
test/utils/: test_utilities.cpp  test_utilities.h
